[gd_scene load_steps=7 format=3 uid="uid://cyufd5a62xk1a"]

[ext_resource type="Texture2D" uid="uid://2djrlfg2ikuh" path="res://Assets/UI/DialogueBackground.png" id="1_14vcb"]
[ext_resource type="Texture2D" uid="uid://j8jn0xf0cdcl" path="res://Assets/UI/boarders_160_60.png" id="2_bvogv"]
[ext_resource type="Script" path="res://Scenes/UI/DialogueScenes/dialogue_screen_handler.gd" id="2_h78hi"]
[ext_resource type="Texture2D" uid="uid://c08b6ipxoyb1q" path="res://Assets/UI/talk4.png" id="3_7b5ks"]
[ext_resource type="PackedScene" uid="uid://blu5vwi1ly2y4" path="res://Scenes/levels/level 1.tscn" id="3_q8vfu"]
[ext_resource type="Texture2D" uid="uid://c2apdqyaoqpv7" path="res://Assets/UI/36_7.png" id="4_iwtw8"]

[node name="DialogueScreen" type="TextureRect"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_14vcb")
script = ExtResource("2_h78hi")
transition_scene = ExtResource("3_q8vfu")

[node name="DialogueBox" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = 60.0
offset_right = 400.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(400, 0)
texture = ExtResource("2_bvogv")

[node name="RichTextLabel" type="RichTextLabel" parent="DialogueBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -380.0
offset_top = -130.0
offset_right = 380.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
text = "Commander Taryn:

Pilot, you are humanities last hope. This war has dragged on for far too long and we finally have a chance to end it. Bring this weapon to our ally base, codenamed “Radiant Dawn,” and put an end to this conflict once and for all. No doubt the enemy will try and stop you. But I know you got this. This is what you were trained for. Good luck, Rookie. 

Commander Taryn out. "

[node name="TalkIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -290.0
offset_right = 22.5
offset_bottom = -221.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
pivot_offset = Vector2(22.5, 0)
texture = ExtResource("3_7b5ks")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -140.0
offset_right = 90.0
offset_bottom = -105.0
grow_horizontal = 2
grow_vertical = 0
icon = ExtResource("4_iwtw8")

[node name="Label" type="Label" parent="Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -12.5
offset_right = 80.0
offset_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2
text = "Continue"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
