[gd_scene load_steps=7 format=3 uid="uid://na6jo5727frq"]

[ext_resource type="Texture2D" uid="uid://bqgiisgn5b314" path="res://Assets/UI/walker_away.png" id="1_jul0l"]
[ext_resource type="Script" path="res://Scenes/UI/DialogueScenes/dialogue_screen_handler.gd" id="2_7g77p"]
[ext_resource type="PackedScene" uid="uid://mx4b5qpelyai" path="res://Scenes/UI/GameStart/MainMenu.tscn" id="3_ngac2"]
[ext_resource type="Texture2D" uid="uid://bmb1tajkanr1l" path="res://Assets/UI/boarders_60_16.png" id="4_40nmr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_my0wu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_owgl2"]

[node name="WalkAway" type="TextureRect"]
offset_right = 384.0
offset_bottom = 216.0
scale = Vector2(5, 5)
texture = ExtResource("1_jul0l")
script = ExtResource("2_7g77p")
transition_scene = ExtResource("3_ngac2")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -37.5
offset_top = -66.0
offset_right = 37.5
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 14
text = "Game over - Good Ending"

[node name="ReturnToMainMenu" type="Button" parent="."]
layout_mode = 0
offset_left = 121.6
offset_top = 167.0
offset_right = 421.6
offset_bottom = 247.0
scale = Vector2(0.5, 0.5)
theme_override_styles/hover = SubResource("StyleBoxEmpty_my0wu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_owgl2")
icon = ExtResource("4_40nmr")

[node name="Response" type="Label" parent="ReturnToMainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -25.0
offset_right = 135.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = -30
theme_override_font_sizes/font_size = 24
text = "
Return to Main Menu"
horizontal_alignment = 1
autowrap_mode = 3

[connection signal="pressed" from="ReturnToMainMenu" to="." method="_on_return_to_main_menu_pressed"]
